src/objects/KS_Usuario_MarcaArea__c.object
<CustomObject>
    <description>KAIZENSTEP. DESACTIVADO. Determina el ámbito de actuación de cada usuario (por zona) --&gt; mapping del crm antinguo</description>
    <fields>
        <fullName>KS_Area__c</fullName>
        <description>Área Geográfica</description>
        <label>Área</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Marca__c</fullName>
        <description>Marca / Empresa / Organización de Ventas</description>
        <label>Marca</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Organizacion_de_ventas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Usuario__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Usuario</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Usuario_MarcaArea</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Usuario Marca/Área</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>KS_Area__c</columns>
        <columns>KS_Marca__c</columns>
        <columns>KS_Usuario__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>UMA-{0000000}</displayFormat>
        <label>ID Usuario Marca/Área</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usuarios Marcas/Áreas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>